kubernetes/apps/go-ffxi/nats/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-internal
  annotations:
    lbipam.cilium.io/ips: "10.50.100.6"
spec:
  type: LoadBalancer
  sessionAffinity: ClientIP
  ports:
    - name: nats
      port: 4222
      targetPort: 4222
      protocol: TCP
  selector:
    app.kubernetes.io/name: nats
