kubernetes/apps/go-ffxi/nats/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nats
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname "internal.${DOMAIN_5}"
spec:
  gatewayClassName: cilium
  listeners:
    - name: nats
      protocol: TCP
      port: 4222
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TCPRoute
